; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sky2.c_sky2_phy_reinit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_sky2.c_sky2_phy_reinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sky2_port = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sky2_port*)* @sky2_phy_reinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sky2_phy_reinit(%struct.sky2_port* %0) #0 {
  %2 = alloca %struct.sky2_port*, align 8
  store %struct.sky2_port* %0, %struct.sky2_port** %2, align 8
  %3 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %4 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %3, i32 0, i32 0
  %5 = call i32 @spin_lock_bh(i32* %4)
  %6 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %7 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %10 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @sky2_phy_init(i32 %8, i32 %11)
  %13 = load %struct.sky2_port*, %struct.sky2_port** %2, align 8
  %14 = getelementptr inbounds %struct.sky2_port, %struct.sky2_port* %13, i32 0, i32 0
  %15 = call i32 @spin_unlock_bh(i32* %14)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @sky2_phy_init(i32, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
